--- a/site_dashboard_django/templates/dash/projects.html
+++ b/site_dashboard_django/templates/dash/projects.html
@@ -44,11 +44,69 @@ Projets
 
 <div class="relative"> 
   <div class="absolute right-0">
-  <a href="" class="fa fa-edit text-slate-500 mr-2"></a> <a href="" class="fa fa-trash text-rose-500 mr-2"></a>
+    <button class="fa fa-trash text-rose-500 mr-2" type="button" onclick="toggleModal('modal-id-{{project.id}}')"></button>
+    <div class="hidden overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:outline-none justify-center items-center" id="modal-id-{{project.id}}">
+      <div class="relative w-auto my-6 mx-auto max-w-3xl">
+        <!--content-->
+        <div class="border-0 rounded-lg shadow-lg relative flex flex-col w-full bg-white outline-none focus:outline-none">
+          <!--header-->
+          <div class="flex items-start justify-between p-5 border-b border-solid border-slate-200 rounded-t">
+            <h3 class="text-3xl font-semibold">
+              Supprimer {{project.name}} definitivement ?
+            </h3>
+            <button class="p-1 ml-auto bg-transparent border-0 text-black opacity-5 float-right text-3xl leading-none font-semibold outline-none focus:outline-none" onclick="toggleModal('modal-id-{{project.id}}')">
+              <span class="bg-transparent text-black opacity-5 h-6 w-6 text-2xl block outline-none focus:outline-none">
+                × jgjgj
+              </span>
+            </button>
+          </div>
+          <!--body-->
+          <div class="relative p-6 flex-auto">
+            <p class="my-4 text-slate-500 text-lg leading-relaxed">
+              Attention cette action est irréversible. 
+              Serons détruit en cascade les Product Back logs associés, ainsi que les US et autres attributs de cette instance de {{project.name}}
+              Les informations relatives à ce projet serons elles aussi supprimées !
+              Etes vous sur ?
+            </p>
+          </div>
+          <!--footer-->
+          <div class="flex items-center justify-end p-6 border-t border-solid border-slate-200 rounded-b">
+            <button class="text-red-500 background-transparent font-bold uppercase px-6 py-2 text-sm outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button" onclick="toggleModal('modal-id-{{project.id}}')">
+              Fermer
+            </button>
+            
+
+              <form class="" method="POST" action="">
+                {% csrf_token %}
+                <input  type="hidden" name="project_id" value="{{ project.id }}">
+
+                <button class="bg-orange-500 text-white active:bg-orange-600 font-bold uppercase text-sm px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150"
+                 onclick="toggleModal('modal-id-{{project.id}}')" type="submit" name="delete_project">supprimer {{project}}</button>
+              </button>
+
+            </form>
+
+
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="hidden opacity-25 fixed inset-0 z-40 bg-black" id="modal-id-{{project.id}}-backdrop"></div>
+ 
+
   </div>
 </div>
 
 </div>
+<script type="text/javascript">
+  function toggleModal(modalID){
+    document.getElementById(modalID).classList.toggle("hidden");
+    document.getElementById(modalID + "-backdrop").classList.toggle("hidden");
+    document.getElementById(modalID).classList.toggle("flex");
+    document.getElementById(modalID + "-backdrop").classList.toggle("flex");
+  }
+</script>
 {% endfor %}
 </div>
 <div class="full bg-white rounded-lg shadow-lg px-20" >
@@ -89,8 +147,7 @@ Projets
          }
         
     });
-</script>
-
+  </script>
 
 
 
