--- a/site_dashboard_django/templates/alert.html
+++ b/site_dashboard_django/templates/alert.html
@@ -1,6 +1,6 @@
 <div class="alert w-full bg-slate-200 py-1 rounded-b-lg text-center relative">
 	<p class="inline "><span class="font-bold">Message {{type}} </span>:<span> {{message}}</span></p>
-	<button class="alert-toggle"><span  class="absolute right-0 top-0 fa fa-xmark bg-slate-400 mr-4 mt-1"></span></button>
+	<button class="alert-toggle"><span  class="absolute right-0 top-0 fa fa-xmark text-slate-400 mr-4 mt-2"></span></button>
 </div>
 
 <script>
