--- a/site_dashboard_django/templates/dash/us_detail.html
+++ b/site_dashboard_django/templates/dash/us_detail.html
@@ -8,7 +8,7 @@ Projets
 <div class="rounded-lg bg-slate-50 p-4 ">
 
 <div class="relative">
-<h1 class="text-2xl">US {{US}}</h1>
+<h1 class="text-2xl">{{US.name}}</h1>
 <a href="#" class="absolute right-0 top-0 fa fa-edit"></a>
 </div>
 
@@ -20,7 +20,7 @@ Projets
 <div class="grid grid-cols-4 gap-8 shadow-lg rounded-lg bg-white">
 
 <div class="p-4  rounded-l-lg bg-white overflow-hidden lg:col-span-3 col-span-4">
-{{US.project}}<br>
+{{US.project.name}}<br>
 {{US.name}}<br>
 {{US.product_back_log}}<br>
 {{US.theme}}<br>
