--- a/site_dashboard_django/templates/form_template.html
+++ b/site_dashboard_django/templates/form_template.html
@@ -26,13 +26,13 @@
 {% endif %}
 
 {% else %}
-<form class="m-2" method="POST" action="{{ action }}">
+<form class="m-2 pb-2" method="POST" action="{{ action }}">
 
     {% csrf_token %}
    
-    <div class="grid grid-cols-1 gap-4">
+    <div class="grid grid-cols-1 gap-1">
             {% for field in form %}
-            <div class="border-0 pb-4 col-span-1">
+            <div class="border-0 col-span-1">
                 <div>{{ field.errors }}</div>
                 <div class="columns-2">
                 <div class="">{{ field.label_tag }}</div>
@@ -43,8 +43,9 @@
         </div>
 
         <hr class="m-2">
-    <button name="{{name_action}}" class="submit  px-2 py-2 rounded-lg text-green-400 border-2 border-green-400  hover:border-white hover:text-white hover:bg-green-400">{{btn_label}}</button>
-
+    <div class="relative w-full h-10 ">
+    <button name="{{name_action}}" class="absolute right-0 submit px-5 py-2 rounded-lg text-green-400 border-2 border-green-400  hover:border-white hover:text-white hover:bg-green-400">{{btn_label}}</button>
+    </div>
 </form>
 
 {% endif %}
