--- a/site_dashboard_django/templates/navbar.html
+++ b/site_dashboard_django/templates/navbar.html
@@ -25,6 +25,7 @@
             <!-- Secondary Navbar items -->
             <div class="hidden md:flex items-center space-x-3 ">
                 <a href="{% url 'admin:index' %}" class="py-2 px-2 font-medium text-gray-500 rounded bg-slate-100 hover:bg-green-500 hover:text-white transition duration-300">Admin</a>
+                <a href= "#" class="fa fa-gear text-slate-500 text-lg"></a>
             </div>
             <!-- Mobile menu button -->
             <div class="md:hidden flex items-center">
